--- a/foto.html
+++ b/foto.html
@@ -417,7 +417,8 @@
          I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI
          I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI
          I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI
-         I LOVE NINDI I LOVE NINDI     
+         I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI
+         I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI I LOVE NINDI     
         </p>
         <p align="center">From Rifki &#10084;</p>
     </div>
