--- a/flower.html
+++ b/flower.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <title>Bunga untuk Nindi &#10084;</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
 <body class="container">
     <div class="night">
+        <div class="surat">
+        <h1><span>Selamat&nbsp</span></h1>
+        <h1><span>Hari&nbsp</span></h1>
+        <h1><span>Kasih&nbsp</span></h1>
+        <h1><span>Sayang&nbsp</span></h1>
+        <h1><span>Nindi&nbsp</span></h1>
+      </div>
     </div>
     <div class="flowers">
       <div class="flower flower--1">
